Change Smash 4 data label style

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 {{move.name}}
                             </option>
                         </select>
-                        <span ng-hide="moveset_info == null">{{moveset_info}}</span>
+                        <span id="smash4-data" ng-hide="moveset_info == null">{{moveset_info}}</span>
                         <br />
                         <a class="select-link" href="http://kuroganehammer.com/Ultimate/{{encodedAttackerValue}}"
                            target="_blank" rel="noopener">{{attackerName}}&nbsp;frame data</a>
