--- a/kocalc.html
+++ b/kocalc.html
@@ -259,7 +259,7 @@
                         <select id="moveset" ng-model="move" ng-change="updateAttack()" ng-style="moveset_style">
                             <option ng-selected="$first" ng:repeat="move in moveset" ng-attr-value="{{move.id}}">{{move.name}}</option>
                         </select>
-                        <span ng-hide="moveset_info == null">{{moveset_info}}</span>
+                        <span id="smash4-data" ng-hide="moveset_info == null">{{moveset_info}}</span>
                         <br />
                         <a class="select-link" href="http://kuroganehammer.com/Ultimate/{{encodedAttackerValue}}" target="_blank" rel="noopener">{{attackerName}}&nbsp;frame data</a>
                         <br />
