--- a/kocalc.html
+++ b/kocalc.html
@@ -16,7 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/visualizer.js"></script>
     <script src="js/game.js"></script>
-    <script src="js/KH_API.js"></script>
+    <script src="js/ultHitboxes.js"></script>
     <script src="js/move.js"></script>
     <script src="js/character.js"></script>
     <script src="js/knockback.js"></script>
@@ -515,6 +515,9 @@
                             </optgroup>
                         </select>
 
+                        <span style="padding: 0px 3px;">
+                            {{Calculator.Attacker.MoveSource}}
+                        </span>
 
                         <table>
                             <tr>
@@ -621,7 +624,6 @@
                                 </td>
                             </tr>
                             <tr ng-if="Calculator.SelectedMove.MoveRef.IsAerialAttack">
-
                             </tr>
                         </table>
 
@@ -632,7 +634,7 @@
                                 <tr>
                                     <td ng-repeat="n in Calculator.GameVariables.StaleQueue track by $index" class="queue-td">
                                         <input class="queue-cb" name="stale{{$index}}" data-value="{{$index+1}}"
-                                               type="checkbox" ng-model="Calculator.GameVariables.StaleQueue[$index]" ng-change="Calculator.Update()" /> <!--ng-change="update()"-->
+                                               type="checkbox" ng-model="Calculator.GameVariables.StaleQueue[$index]" ng-change="Calculator.Update()" />
                                     </td>
                                 </tr>
                             </table>
@@ -641,7 +643,7 @@
                                 <tr>
                                     <td ng-repeat="n in Calculator.GameVariables.ShieldStaleQueue track by $index" class="queue-td">
                                         <input class="queue-cb" name="shieldStale{{$index}}" data-value="{{$index+1}}"
-                                               type="checkbox" ng-model="Calculator.GameVariables.ShieldStaleQueue[$index]" ng-change="Calculator.Update()" /> <!--ng-change="update()"-->
+                                               type="checkbox" ng-model="Calculator.GameVariables.ShieldStaleQueue[$index]" ng-change="Calculator.Update()" />
                                     </td>
                                 </tr>
                             </table>
