--- a/kocalc.html
+++ b/kocalc.html
@@ -25,8 +25,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="js/kocalc.js"></script>
-    <!--<script src="js/KuroganeAPI.js"></script>
-    <script src="js/calculator.js"></script>-->
+    <!--<script src="js/KuroganeAPI.js"></script>-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
     <link id="favicon" rel="shortcut icon" href="./img/icon.png" type="image/png" />
@@ -35,7 +34,7 @@
     <link rel="stylesheet" type="text/css" href="css/moves.css" />
     <title>Smash Ultimate Calculator</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.5" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.45" />
     <meta name="description" content="Smash Ultimate KO % calculator" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Ruben_dal" />
@@ -301,10 +300,21 @@
 
                             <div class="char-select">
                                 <!--<img ng-src="{{Calculator.Attacker.icon}}" class="stock-icon" />-->
-                                <span class="character-image-cont">
+                                <div class="character-image-cont" data-character="attacker">
                                     <img ng-src="{{Calculator.Attacker.image}}"
                                          class="character-image" ng-class="Calculator.Attacker.class" />
-                                </span>
+                                    <div id="attacker-data" class="character-data">
+                                        <div>
+                                            {{Calculator.Attacker.CharacterName}} data
+                                        </div>
+                                        <div>
+                                            <a href="https://rubendal.github.io/ssbu/#/Character/{{Calculator.Attacker.DataViewerName}}" target="_blank">Data Viewer</a>
+                                        </div>
+                                        <div>
+                                            <a href="https://ultimate-hitboxes.com/{{Calculator.Attacker.UltHitboxesName}}" target="_blank">Ultimate Hitboxes</a>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="percent-div">
                                     <input name="attacker_percent" type="number" class="percent-input" min="0" max="999"
                                            step="0.1" ng-model="Calculator.AttackerPercent.Percent" ng-style="Calculator.AttackerPercent.Style" ng-change="Calculator.UpdateAttackerPercent()" /><!--ng-change="updatePercent()"-->
@@ -346,10 +356,21 @@
 
                             <div class="char-select">
                                 <!--<img ng-src="{{Calculator.Target.icon}}" class="stock-icon" />-->
-                                <span class="character-image-cont">
+                                <div class="character-image-cont" data-character="target">
                                     <img ng-src="{{Calculator.Target.image}}"
                                          class="character-image" ng-class="Calculator.Target.class" />
-                                </span>
+                                    <div id="target-data" class="character-data">
+                                        <div>
+                                            {{Calculator.Target.CharacterName}} data
+                                        </div>
+                                        <div>
+                                            <a href="https://rubendal.github.io/ssbu/#/Character/{{Calculator.Target.DataViewerName}}" target="_blank">Data Viewer</a>
+                                        </div>
+                                        <div>
+                                            <a href="https://ultimate-hitboxes.com/{{Calculator.Target.UltHitboxesName}}" target="_blank">Ultimate Hitboxes</a>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="percent-div">
                                     <input name="target_percent" type="number" class="percent-input" min="0" max="999"
                                            step="0.1" disabled readonly />
