Remove hit frame min and max values on custom move

--- a/multicalc.html
+++ b/multicalc.html
@@ -265,28 +265,28 @@
                         <tr>
                             <td>Weight</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="target_weight" type="number" min="0" max="999" step="1"
+                                <input name="target_weight" type="number" min="0" max="999" step="1"
                                                          ng-model="target_weight" ng-change="updateAttr()" />
                             </td>
                         </tr>
                         <tr>
                             <td>Gravity</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="target_gravity" type="number" min="0" max="10"
+                                <input name="target_gravity" type="number" min="0" max="10"
                                                          step="0.001" ng-model="target_gravity" ng-change="updateAttr()" />
                             </td>
                         </tr>
                         <tr>
                             <td>Fall speed</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="target_fall_speed" type="number" min="0" max="10"
+                                <input name="target_fall_speed" type="number" min="0" max="10"
                                                          step="0.001" ng-model="target_fall_speed" ng-change="updateAttr()" />
                             </td>
                         </tr>
                         <tr>
                             <td>DamageFlyTop Gravity</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="target_damageflytop_gravity" type="number" min="0"
+                                <input name="target_damageflytop_gravity" type="number" min="0"
                                                          max="10" step="0.001" ng-model="target_damageflytop_gravity"
                                                          ng-change="updateAttr()" />
                             </td>
@@ -294,7 +294,7 @@
                         <tr>
                             <td>DamageFlyTop Fall speed</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="target_damageflytop_fall_speed" type="number" min="0"
+                                <input name="target_damageflytop_fall_speed" type="number" min="0"
                                                          max="10" step="0.001" ng-model="target_damageflytop_fall_speed"
                                                          ng-change="updateAttr()" />
                             </td>
@@ -302,7 +302,7 @@
                         <tr>
                             <td>Traction</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="target_traction" type="number" min="0" max="1"
+                                <input name="target_traction" type="number" min="0" max="1"
                                                          step="0.001" ng-model="target_traction" ng-change="updateAttr()" />
                             </td>
                         </tr>
@@ -310,7 +310,7 @@
                         <tr>
                             <td>Ink</td>
                             <td>
-                                &nbsp;&nbsp;&nbsp;<input name="ink_value" type="number" min="0" max="300"
+                                <input name="ink_value" type="number" min="0" max="300"
                                                          step="0.01" ng-model="inkValue" ng-change="updateAttr()" />
                             </td>
                         </tr>
