--- a/percentcalc.html
+++ b/percentcalc.html
@@ -339,42 +339,42 @@
                             <tr>
                                 <td>Weight</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="target_weight" type="number" min="0" max="999" step="1"
+                                    <input name="target_weight" type="number" min="0" max="999" step="1"
                                                              ng-model="Calculator.Target.Attributes.Weight" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr>
                                 <td>Gravity</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="target_gravity" type="number" min="0" max="10"
+                                    <input name="target_gravity" type="number" min="0" max="10"
                                                              step="0.001" ng-model="Calculator.Target.Attributes.Gravity" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr>
                                 <td>Fall speed</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="target_fall_speed" type="number" min="0" max="10"
+                                    <input name="target_fall_speed" type="number" min="0" max="10"
                                                              step="0.001" ng-model="Calculator.Target.Attributes.FallSpeed" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr>
                                 <td>DamageFlyTop Gravity</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="target_damageflytop_gravity" type="number" min="0"
+                                    <input name="target_damageflytop_gravity" type="number" min="0"
                                                              max="10" step="0.001" ng-model="Calculator.Target.Attributes.DamageFlyTopGravity" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr>
                                 <td>DamageFlyTop Fall speed</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="target_damageflytop_fall_speed" type="number" min="0"
+                                    <input name="target_damageflytop_fall_speed" type="number" min="0"
                                                              max="10" step="0.001" ng-model="Calculator.Target.Attributes.DamageFlyTopFallSpeed" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr>
                                 <td>Traction</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="target_traction" type="number" min="0" max="1"
+                                    <input name="target_traction" type="number" min="0" max="1"
                                                              step="0.001" ng-model="Calculator.Target.Attributes.GroundFriction" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
@@ -382,7 +382,7 @@
                             <tr>
                                 <td>Ink</td>
                                 <td>
-                                    &nbsp;&nbsp;&nbsp;<input name="ink_value" type="number" min="0" max="300"
+                                    <input name="ink_value" type="number" min="0" max="300"
                                                              step="0.01" ng-model="Calculator.GameVariables.InkValue" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
@@ -504,9 +504,13 @@
                             </tr>
                             <tr>
                                 <td>Hit frame</td>
-                                <td>
-                                    <input name="hit_frame" type="number" min="0" max="1000" step="1"
-                                           ng-model="Calculator.SelectedHitframe" ng-change="Calculator.Update()" />
+                                <td ng-if="Calculator.SelectedMove.Name != 'Custom move'">
+                                    <input name="hit_frame" type="number" min="{{Calculator.SelectedMove.StartFrame}}" max="{{Calculator.SelectedMove.EndFrame == 0 || Calculator.SelectedMove.EndFrame == null ? 1000 : Calculator.SelectedMove.EndFrame - 1}}" step="1"
+                                           ng-model="Calculator.GameVariables.SelectedHitframe" ng-change="Calculator.Update()" />
+                                </td>
+                                <td ng-if="Calculator.SelectedMove.Name == 'Custom move'">
+                                    <input name="hit_frame" type="number" min="1" max="1000" step="1"
+                                           ng-model="Calculator.GameVariables.SelectedHitframe" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr>
