--- a/percentcalc.html
+++ b/percentcalc.html
@@ -14,6 +14,7 @@
 
     <script src="js/formulas.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/js/lib/lz-string.min.js"></script>
     <script src="js/visualizer.js"></script>
     <script src="js/game.js"></script>
     <script src="js/ultHitboxes.js"></script>
@@ -517,7 +518,7 @@
                                 <td>FAF</td>
                                 <td>
                                     <input name="faf" type="number" min="0" max="1000" step="1"
-                                           ng-model="Calculator.SelectedMove.MoveRef.FAF" ng-change="Calculator.Update()" />
+                                           ng-model="Calculator.GameVariables.SelectedFAF" ng-change="Calculator.Update()" />
                                 </td>
                             </tr>
                             <tr ng-if="Calculator.SelectedMove.MoveRef.IsAerialAttack">
